Fixed table alignment

--- a/themes/quasar/source/css/page.styl
+++ b/themes/quasar/source/css/page.styl
@@ -99,6 +99,7 @@
     tr
       &:nth-child(2n)
         background $bg
+      vertical-align top
   figure
     table
       border 0
